--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -5,3 +5,13 @@
     </a>
   </li>
 -->
+
+<li class="text-center">
+  <form class="donation_form" action="https://www.paypal.com/cgi-bin/webscr"
+        method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="Q57G3Q73CJNML">
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
+           border="0" name="submit" alt="Donate via PayPal">
+  </form>
+</li>
