Minotr sidebar and footer tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,9 +24,13 @@
 
 <div class="page__footer-copyright">
   &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.
-  {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
-  <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.
-  Women for Women is recognized by the IRS as a 501(c)(3) non-profit organization, EIN 83-0322262.
-  Our exemption derives from a group exemption granted to the National Network of Abortion Funds of which we are an affiliate.
-  Donations are deductible to the extent allowed by law.
+  {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }}
+  <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
+  <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/"
+  rel="nofollow">Minimal Mistakes</a>. Women for Women is recognized
+  by the IRS as a 501(c)(3) non-profit organization, EIN 83-0322262.
+  Our exemption derives from a group exemption granted to
+  the <a href="https://abortionfunds.org/">National Network of
+  Abortion Funds</a> of which we are an affiliate. Donations are
+  deductible to the extent allowed by law.
 </div>
