--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,14 +4,18 @@
 
 @charset "utf-8";
 
-.donation_form {
-    background-color: #ffffff;
-}
-
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin |
 default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
+.donation_form {
+    background-color: #ffffff;
+}
+
 .page__content p {
     font-size: .85em;
+}
+
+.sidebar.sticky {
+    height: auto;
 }
