--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,8 +29,5 @@
   <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/"
   rel="nofollow">Minimal Mistakes</a>. Women for Women is recognized
   by the IRS as a 501(c)(3) non-profit organization, EIN 83-0322262.
-  Our exemption derives from a group exemption granted to
-  the <a href="https://abortionfunds.org/">National Network of
-  Abortion Funds</a> of which we are an affiliate. Donations are
-  deductible to the extent allowed by law.
+  Donations are deductible to the extent allowed by law.
 </div>
