--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -37,6 +37,12 @@
         {{ author.bio }}
       </p>
     {% endif %}
+    <p class="name_change" itemprop="description">
+      <em>
+        Women for Women has a new name! We're now Chelsea's Fund.
+        Read <a href="/newname/">our announcement</a>.
+      </em>
+    </p>
   </div>
 
   <div class="author__urls-wrapper">
