--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,8 @@
   {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }}
   <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
   <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/"
-  rel="nofollow">Minimal Mistakes</a>. Women for Women is recognized
+  rel="nofollow">Minimal Mistakes</a>. Chelsea's Fund is recognized
   by the IRS as a 501(c)(3) non-profit organization, EIN 83-0322262.
-  Donations are deductible to the extent allowed by law.
+  <a href="/about/#donations">Donations</a> are deductible to the
+  extent allowed by law.
 </div>
