Updated new name sidebar link

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -39,8 +39,10 @@
     {% endif %}
     <p class="name_change" itemprop="description">
       <em>
-        Women for Women has a new name! We're now Chelsea's Fund.
-        Read <a href="/newname/">our announcement</a>.
+        <a href="/newname/">
+          Women for Women has a new name! We're now Chelsea's Fund.
+          Read our announcement.
+        </a>
       </em>
     </p>
   </div>
