Added Chelsea's Fund 501(c)(3) Affirmation letter

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -39,9 +39,12 @@
     {% endif %}
     <p class="name_change" itemprop="description">
       <em>
+        Women for Women has a new name! We're now Chelsea's Fund.
         <a href="/newname/">
-          Women for Women has a new name! We're now Chelsea's Fund.
           Read our announcement.
+        </a>
+        <a href="/assets/files/irs_501c3.pdf">
+          View our 501(c)(3) Affirmation letter.
         </a>
       </em>
     </p>
