--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,8 @@
   <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
   <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/"
   rel="nofollow">Minimal Mistakes</a>. Chelsea's Fund is recognized
-  by the IRS as a 501(c)(3) non-profit organization, EIN 83-0322262.
+  by the IRS as a 501(c)(3) non-profit organization,
+  <a href="/assets/files/irs_501c3.pdf">EIN 83-0322262</a>.
   <a href="/about/#donations">Donations</a> are deductible to the
   extent allowed by law.
 </div>
