--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -6,12 +6,11 @@
   </li>
 -->
 
-<li class="text-center">
-  <form class="donation_form" action="https://www.paypal.com/cgi-bin/webscr"
+<li class="text-left">
+  <form class="donation_form" action="https://www.paypal.com/donate"
         method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="Q57G3Q73CJNML">
-    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"
-           border="0" name="submit" alt="Donate via PayPal">
+    <input type="hidden" name="hosted_button_id" value="TNQ2887TN4NT4" />
+    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif"
+           border="0" name="submit" alt="Donate with PayPal button" />
   </form>
 </li>
